--- a/README
+++ b/README
@@ -2,19 +2,73 @@
 
 ## Introduction
 
-The Rcpi package supports the analysis of compound-protein interactions with R. Rcpi supports retrieving protein sequence data from UniProt and KEGG, retrieving drug molecular data from PubChem, ChEMBL, CAS, KEGG and DrugBank. Rcpi offers the functionalities of protein sequence feature extraction, calculating drug molecular descriptors and fingerprints, and integrate the whole process all in one. All the users need to do, is providing the pair input of the drug and protein IDs. The package is developed by Computational Biology and Drug Design Group, Central South University.
+The Rcpi package supports the analysis of compound-protein interactions with R. Rcpi supports retrieving protein sequence data from UniProt, KEGG and RCSB PDB, retrieving drug molecular data from PubChem, ChEMBL, CAS, KEGG and DrugBank. Rcpi offers the functionalities of protein sequence feature extraction, calculating drug molecular descriptors and fingerprints, and integrate the whole process all in one. All the users need to do, is providing the pair input of the drug and protein IDs. The package is developed by Computational Biology and Drug Design Group, Central South University.
 
 ## Supported Protein Sequence Database
 
-Some Content Here.
+  * PubChem
+  
+  * ChEMBL
+  
+  * CAS
+  
+  * KEGG
+  
+  * DrugBank
 
 ## Supported Drug Molecular Database
 
-Some Content Here.
+  * UniProt
+  
+  * KEGG
+  
+  * RCSB PDB
+
+## Supported Protein Sequence Formats
+
+  * FASTA
+  
+  * PDB (Protein Data Bank)
+
+## Supported Drug Molecular Formats
+  
+  * Mol / SDF
+  
+  * Smile
+  
+  * InChI (CAS only)
 
 ## Supported Protein Sequence Features
 
-Some Content Here.
+  * Amino Acid Composition
+  
+    * Amino Acid Composition
+    * Dipeptide Composition
+    * Tripeptide Composition
+
+  * Autocorrelation
+  
+    * Normalized Moreau-Broto Autocorrelation
+    * Moran Autocorrelation
+    * Geary Autocorrelation
+
+  * CTD
+  
+    * Composition
+    * Transition
+    * Distribution
+
+  * Conjoint Triad
+
+  * Quasi-sequence-order Descriptors
+  
+    * Sequence-order-coupling Number
+    * Quasi-sequence-order Descriptors
+  
+  * Pseudo Amino Acid Composition
+  
+    * Pseudo Amino Acid Composition
+    * Amphiphilic Pseudo Amino Acid Composition
 
 ## Supported Drug Molecular Descriptors and Fingerprints
 
