--- a/vignettes/Rcpi.bib
+++ b/vignettes/Rcpi.bib
@@ -1,3 +1,57 @@
+@article{chou2008cell,
+  title={Cell-PLoc: a package of Web servers for predicting subcellular localization of proteins in various organisms},
+  author={Chou, Kuo-Chen and Shen, Hong-Bin},
+  journal={Nature protocols},
+  volume={3},
+  number={2},
+  pages={153--162},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{chou2005using,
+  title={Using amphiphilic pseudo amino acid composition to predict enzyme subfamily classes},
+  author={Chou, Kuo-Chen},
+  journal={Bioinformatics},
+  volume={21},
+  number={1},
+  pages={10--19},
+  year={2005},
+  publisher={Oxford Univ Press}
+}
+
+@article{cao2012silico,
+  title={In silico toxicity prediction by support vector machine and SMILES representation-based string kernel},
+  author={Cao, D-S and Zhao, J-C and Yang, Y-N and Zhao, C-X and Yan, J and Liu, S and Hu, Q-N and Xu, Q-S and Liang, Y-Z},
+  journal={SAR and QSAR in Environmental Research},
+  volume={23},
+  number={1-2},
+  pages={141--153},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@article{yan2012comparison,
+  title={Comparison of quantitative structure--retention relationship models on four stationary phases with different polarity for a diverse set of flavor compounds},
+  author={Yan, Jun and Cao, Dong-Sheng and Guo, Fang-Qiu and Zhang, Liang-Xiao and He, Min and Huang, Jian-Hua and Xu, Qing-Song and Liang, Yi-Zeng},
+  journal={Journal of Chromatography A},
+  volume={1223},
+  pages={118--125},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{yamanishi2008prediction,
+  title={Prediction of drug--target interaction networks from the integration of chemical and genomic spaces},
+  author={Yamanishi, Yoshihiro and Araki, Michihiro and Gutteridge, Alex and Honda, Wataru and Kanehisa, Minoru},
+  journal={Bioinformatics},
+  volume={24},
+  number={13},
+  pages={i232--i240},
+  year={2008},
+  publisher={Oxford Univ Press}
+}
+
 @ARTICLE{aacdc,
   author = {Manoj Bhasin and Gajendra P. S. Raghava},
   title = {Classification of Nuclear Receptors Based on Amino Acid Composition
