vignette almost done

--- a/vignettes/Rcpi.bib
+++ b/vignettes/Rcpi.bib
@@ -434,6 +434,14 @@
   publisher={Nature Publishing Group}
 }
 
+@Manual{chemmineob,
+  title = {ChemmineOB: R interface to a subset of OpenBabel functionalities},
+  author = {Kevin Horan and Thomas Girke},
+  year = {2013},
+  note = {R package version 1.0.1},
+  url = {http://manuals.bioinformatics.ucr.edu/home/chemminer},
+}
+
 @article{cao2008chemminer,
   title={ChemmineR: a compound mining framework for R},
   author={Cao, Yiqun and Charisi, Anna and Cheng, Li-Chang and Jiang, Tao and Girke, Thomas},
@@ -523,18 +531,18 @@
   year={2005}
 }
 
-@MANUAL{CRAN:protr,
-  title = {{protr}: Protein Sequence Feature Extraction with {R}},
+@Manual{CRAN:protr,
+  title = {protr: Protein Sequence Descriptor Calculation and Similarity Computation with R},
   author = {Nan Xiao and Qingsong Xu and Dongsheng Cao},
   year = {2014},
-  note = {R package version 0.2-0},
+  note = {R package version 0.2-1},
   url = {http://CRAN.R-project.org/package=protr}
 }
 
-@MANUAL{CRAN:Rcpi,
-  title = {Rcpi: Compound-Protein Interactions with R},
-  author = {Nan Xiao and Qingsong Xu and Dongsheng Cao},
+@Manual{CRAN:Rcpi,
+  title = {Rcpi: R/Bioconductor Package for Compound-Protein Interactions},
+  author = {Nan Xiao and Dongsheng Cao and Qingsong Xu},
   year = {2014},
-  note = {R package version 1.0-0},
+  note = {R package version 1.0},
   url = {http://www.bioconductor.org/packages/release/bioc/html/Rcpi.html}
 }
